<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.tasks.FirstFragment"
        android:label="@string/my_tasks"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/ArchiveFragment"
        android:name="com.example.tasks.ArchiveFragment"
        android:label="@string/archived_tasks"
        tools:layout="@layout/fragment_archive">

        <action
            android:id="@+id/action_ArchiveFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.tasks.SecondFragment"
        android:label="@string/add_task"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/AddSubjectFragment"
        android:name="com.example.tasks.AddSubjectFragment"
        android:label="@string/add_subject"
        tools:layout="@layout/fragment_add_subject" />
</navigation>